@@ -1,3 +1,8 @@
+2005-05-18  Ryan Lortie  <desrt@desrt.ca>
+
+	* battstat_applet.c: Reworded battery low warning and made
+	text selectable.  Closes bug #160467.
+
 2005-05-10  Ryan Lortie  <desrt@desrt.ca>
 
 	* Makefile.am: Add acpi-freebsd.[ch].
